@@ -8,30 +8,31 @@ public class ThreeSum {
 
     public List<List<Integer>> threeSum(int[] nums) {
 
-        //Again tried
-        List<List<Integer>> result  = new ArrayList<>();
-        Arrays.sort(nums);
         int len = nums.length;
-        for (int i=0;i<len;i++){
-            if(i>0 && nums[i] == nums[i-1]){
+        Arrays.sort(nums);
+        List<List<Integer>> result = new ArrayList();
+        for(int i =0 ; i<len ; i++){
+            if(i > 0 && nums[i] == nums[i-1]){
                 continue;
             }
-            int j = i + 1;
+            int one = nums[i];
+            int j = i+1;
             int k = len-1;
-            while (j < k){
-                int sum = nums[i] + nums[j] + nums[k];
-                if(sum == 0){
-                    result.add(Arrays.asList(nums[i],nums[j],nums[k]));
+            int target = - one;
+            while(j < k){
+                int sum = nums[j] + nums[k];
+                if(sum == target){
+                    result.add(List.of(one , nums[j],nums[k]));
                     j++;
                     k--;
-                    while (j<k && nums[j] == nums[j+1]){
+                    while(j < k && nums[j] == nums[j-1]){
                         j++;
                     }
-                    while (j<k && nums[k] == nums[k+1]){
+                    while(j < k && nums[k] == nums[k+1]){
                         k--;
                     }
                 }
-                else if(sum > 0){
+                else if(sum > target){
                     k--;
                 }
                 else {
@@ -39,8 +40,42 @@ public class ThreeSum {
                 }
             }
         }
-
         return result;
+
+
+        //Again tried
+//        List<List<Integer>> result  = new ArrayList<>();
+//        Arrays.sort(nums);
+//        int len = nums.length;
+//        for (int i=0;i<len;i++){
+//            if(i>0 && nums[i] == nums[i-1]){
+//                continue;
+//            }
+//            int j = i + 1;
+//            int k = len-1;
+//            while (j < k){
+//                int sum = nums[i] + nums[j] + nums[k];
+//                if(sum == 0){
+//                    result.add(Arrays.asList(nums[i],nums[j],nums[k]));
+//                    j++;
+//                    k--;
+//                    while (j<k && nums[j] == nums[j+1]){
+//                        j++;
+//                    }
+//                    while (j<k && nums[k] == nums[k+1]){
+//                        k--;
+//                    }
+//                }
+//                else if(sum > 0){
+//                    k--;
+//                }
+//                else {
+//                    j++;
+//                }
+//            }
+//        }
+//
+//        return result;
 
 
 //        int startInd = 0;
